{
    "name": "PlayerInputController",
    "maps": [
        {
            "name": "BuildMode",
            "id": "69955f4a-1e01-4674-aa35-f8bf7329eef5",
            "actions": [
                {
                    "name": "SelectPos",
                    "type": "Value",
                    "id": "94431538-509f-47e8-b7d3-167b6e0dc5d5",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "OnClickAction",
                    "type": "Button",
                    "id": "7140a838-17a7-4841-b04b-cee585571d08",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ExitBuildMenu",
                    "type": "Button",
                    "id": "cda10f79-08cd-4d48-aa38-66ccb924a407",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1d32e3a5-7fd0-4d47-b75f-cb79535caca3",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectPos",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4093e8f1-8ef1-4e65-a83c-3bc132b2875d",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectPos",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "864f620a-e744-46ff-a573-1e1f7280b90b",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnClickAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "befc9cc3-9a8e-43ed-98e8-1adec5d9210a",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnClickAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "84d0c940-3393-47f7-a6e6-8bc0649d8339",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ExitBuildMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}